[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/palette/Ramp.gd" type="Script" id=1]
[ext_resource path="res://assets/label_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/palette/ColorCell.tscn" type="PackedScene" id=3]

[node name="Ramp" type="Control"]
margin_right = 768.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 24.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CellContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -560.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -32.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorCell" parent="CellContainer" instance=ExtResource( 3 )]
margin_right = 181.0

[node name="ColorCell2" parent="CellContainer" instance=ExtResource( 3 )]
margin_left = 181.0
margin_right = 362.0

[node name="ColorCell3" parent="CellContainer" instance=ExtResource( 3 )]
margin_left = 362.0
margin_right = 544.0

[node name="SelectButton" type="Button" parent="."]
margin_left = 56.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = 40.0
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 48.0
margin_right = 128.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 2 )
text = "[0]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountSlider" type="HSlider" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 176.0
margin_bottom = 112.0
min_value = 2.0
max_value = 8.0
value = 3.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="value_changed" from="CountSlider" to="." method="_on_CountSlider_value_changed"]
